--- a/requirements.txt
+++ b/requirements.txt
@@ -9,16 +9,22 @@ django-extensions==3.2.3
 django-sendgrid-v5==1.2.3
 exceptiongroup==1.2.2
 executing==2.1.0
+gunicorn==23.0.0
 ipython==8.28.0
 jedi==0.19.1
 matplotlib-inline==0.1.7
+numpy==2.1.2
+packaging==24.1
+pandas==2.2.3
 parso==0.8.4
 pexpect==4.9.0
 prompt_toolkit==3.0.48
 ptyprocess==0.7.0
 pure_eval==0.2.3
 Pygments==2.18.0
+python-dateutil==2.9.0.post0
 python-http-client==3.3.7
+pytz==2024.2
 sendgrid==6.11.0
 six==1.16.0
 sqlparse==0.5.1
@@ -26,4 +32,5 @@ stack-data==0.6.3
 starkbank-ecdsa==2.2.0
 traitlets==5.14.3
 typing_extensions==4.12.2
+tzdata==2024.2
 wcwidth==0.2.13
