--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.8.1
 asttokens==2.4.1
+certifi==2024.8.30
+charset-normalizer==3.4.0
 crispy-bootstrap5==2024.10
 decorator==5.1.1
 Django==5.1.2
@@ -10,6 +12,7 @@ django-sendgrid-v5==1.2.3
 exceptiongroup==1.2.2
 executing==2.1.0
 gunicorn==23.0.0
+idna==3.10
 ipython==8.28.0
 jedi==0.19.1
 matplotlib-inline==0.1.7
@@ -25,6 +28,7 @@ Pygments==2.18.0
 python-dateutil==2.9.0.post0
 python-http-client==3.3.7
 pytz==2024.2
+requests==2.32.3
 sendgrid==6.11.0
 six==1.16.0
 sqlparse==0.5.1
@@ -33,4 +37,5 @@ starkbank-ecdsa==2.2.0
 traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2024.2
+urllib3==2.2.3
 wcwidth==0.2.13
