--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
+annotated-types==0.7.0
+anyio==4.6.0
 asgiref==3.8.1
 asttokens==2.4.1
 certifi==2024.8.30
 charset-normalizer==3.4.0
 crispy-bootstrap5==2024.10
 decorator==5.1.1
+distro==1.9.0
 Django==5.1.2
 django-crispy-forms==2.3
 django-debug-toolbar==4.4.6
@@ -12,11 +15,16 @@ django-sendgrid-v5==1.2.3
 exceptiongroup==1.2.2
 executing==2.1.0
 gunicorn==23.0.0
+h11==0.14.0
+httpcore==1.0.6
+httpx==0.27.2
 idna==3.10
 ipython==8.28.0
 jedi==0.19.1
+jiter==0.6.1
 matplotlib-inline==0.1.7
 numpy==2.1.2
+openai==1.51.2
 packaging==24.1
 pandas==2.2.3
 parso==0.8.4
@@ -24,6 +32,8 @@ pexpect==4.9.0
 prompt_toolkit==3.0.48
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pydantic==2.9.2
+pydantic_core==2.23.4
 Pygments==2.18.0
 python-dateutil==2.9.0.post0
 python-http-client==3.3.7
@@ -31,9 +41,11 @@ pytz==2024.2
 requests==2.32.3
 sendgrid==6.11.0
 six==1.16.0
+sniffio==1.3.1
 sqlparse==0.5.1
 stack-data==0.6.3
 starkbank-ecdsa==2.2.0
+tqdm==4.66.5
 traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2024.2
