--- a/configuration/ngnix_polishness.conf
+++ b/configuration/ngnix_polishness.conf
@@ -1,14 +1,18 @@
-server {
-       listen 80;
-
+  server {
+       listen 443 ssl;
+       server_name poznajmypolske.pl www.poznajmypolske.pl;
 
        location /static/ {
           alias /home/danielp/DjangoPolishnessApp/staticfiles/;
        }
+    ssl_certificate /etc/letsencrypt/live/poznajmypolske.pl/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/poznajmypolske.pl/privkey.pem; # managed by Certbot
+
 
        location / {
                proxy_pass http://127.0.0.1:8000;
                proxy_set_header Host $host;
                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        }
+
 }
