--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,11 @@ anyio==4.6.0
 asgiref==3.8.1
 asttokens==2.4.1
 certifi==2024.8.30
+cfgv==3.4.0
 charset-normalizer==3.4.0
 crispy-bootstrap5==2024.10
 decorator==5.1.1
+distlib==0.3.9
 distro==1.9.0
 Django==5.1.2
 django-crispy-forms==2.3
@@ -14,21 +16,26 @@ django-extensions==3.2.3
 django-sendgrid-v5==1.2.3
 exceptiongroup==1.2.2
 executing==2.1.0
+filelock==3.16.1
 gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.6
 httpx==0.27.2
+identify==2.6.1
 idna==3.10
 ipython==8.28.0
 jedi==0.19.1
 jiter==0.6.1
 matplotlib-inline==0.1.7
+nodeenv==1.9.1
 numpy==2.1.2
 openai==1.51.2
 packaging==24.1
 pandas==2.2.3
 parso==0.8.4
 pexpect==4.9.0
+platformdirs==4.3.6
+pre_commit==4.0.1
 prompt_toolkit==3.0.48
 ptyprocess==0.7.0
 pure_eval==0.2.3
@@ -38,6 +45,7 @@ Pygments==2.18.0
 python-dateutil==2.9.0.post0
 python-http-client==3.3.7
 pytz==2024.2
+PyYAML==6.0.2
 requests==2.32.3
 sendgrid==6.11.0
 six==1.16.0
@@ -50,4 +58,5 @@ traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
+virtualenv==20.27.0
 wcwidth==0.2.13
