--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,3 +26,15 @@ repos:
     hooks:
     -   id: flake8
         args: [--max-line-length=120]
+
+- repo: https://github.com/PyCQA/bandit
+  rev: 1.7.10
+  hooks:
+  - id: bandit
+    name: bandit
+    entry: bandit
+    args: ["-r", ".", "--exclude", "./venv/", "-s", "B311"]
+    language: python
+    types: [python]
+    pass_filenames: false
+    always_run: true
