--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ annotated-types==0.7.0
 anyio==4.6.0
 asgiref==3.8.1
 asttokens==2.4.1
+bandit==1.7.10
 certifi==2024.8.30
 cfgv==3.4.0
 charset-normalizer==3.4.0
@@ -26,13 +27,17 @@ idna==3.10
 ipython==8.28.0
 jedi==0.19.1
 jiter==0.6.1
+markdown-it-py==3.0.0
 matplotlib-inline==0.1.7
+mccabe==0.7.0
+mdurl==0.1.2
 nodeenv==1.9.1
 numpy==2.1.2
 openai==1.51.2
 packaging==24.1
 pandas==2.2.3
 parso==0.8.4
+pbr==6.1.0
 pexpect==4.9.0
 platformdirs==4.3.6
 pre_commit==4.0.1
@@ -41,18 +46,21 @@ ptyprocess==0.7.0
 pure_eval==0.2.3
 pydantic==2.9.2
 pydantic_core==2.23.4
+pyflakes==3.2.0
 Pygments==2.18.0
 python-dateutil==2.9.0.post0
 python-http-client==3.3.7
 pytz==2024.2
 PyYAML==6.0.2
 requests==2.32.3
+rich==13.9.2
 sendgrid==6.11.0
 six==1.16.0
 sniffio==1.3.1
 sqlparse==0.5.1
 stack-data==0.6.3
 starkbank-ecdsa==2.2.0
+stevedore==5.3.0
 tqdm==4.66.5
 traitlets==5.14.3
 typing_extensions==4.12.2
