--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,20 @@
+amqp==5.2.0
 annotated-types==0.7.0
 anyio==4.6.0
 asgiref==3.8.1
 asttokens==2.4.1
+async-timeout==5.0.0
 bandit==1.7.10
+beautifulsoup4==4.12.3
+billiard==4.2.1
+celery==5.4.0
 certifi==2024.8.30
 cfgv==3.4.0
 charset-normalizer==3.4.0
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 crispy-bootstrap5==2024.10
 decorator==5.1.1
 distlib==0.3.9
@@ -27,6 +36,8 @@ idna==3.10
 ipython==8.28.0
 jedi==0.19.1
 jiter==0.6.1
+kombu==5.4.2
+lxml==5.3.0
 markdown-it-py==3.0.0
 matplotlib-inline==0.1.7
 mccabe==0.7.0
@@ -52,11 +63,13 @@ python-dateutil==2.9.0.post0
 python-http-client==3.3.7
 pytz==2024.2
 PyYAML==6.0.2
+redis==5.2.0
 requests==2.32.3
 rich==13.9.2
 sendgrid==6.11.0
 six==1.16.0
 sniffio==1.3.1
+soupsieve==2.6
 sqlparse==0.5.1
 stack-data==0.6.3
 starkbank-ecdsa==2.2.0
@@ -66,5 +79,6 @@ traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
+vine==5.1.0
 virtualenv==20.27.0
 wcwidth==0.2.13
