--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ django-extensions==3.2.3
 django-sendgrid-v5==1.2.3
 exceptiongroup==1.2.2
 executing==2.1.0
+feedparser==6.0.11
 filelock==3.16.1
 gunicorn==23.0.0
 h11==0.14.0
@@ -33,6 +34,7 @@ httpcore==1.0.6
 httpx==0.27.2
 identify==2.6.1
 idna==3.10
+inflect==7.4.0
 ipython==8.28.0
 jedi==0.19.1
 jiter==0.6.1
@@ -42,6 +44,7 @@ markdown-it-py==3.0.0
 matplotlib-inline==0.1.7
 mccabe==0.7.0
 mdurl==0.1.2
+more-itertools==10.5.0
 nodeenv==1.9.1
 numpy==2.1.2
 openai==1.51.2
@@ -67,6 +70,7 @@ redis==5.2.0
 requests==2.32.3
 rich==13.9.2
 sendgrid==6.11.0
+sgmllib3k==1.0.0
 six==1.16.0
 sniffio==1.3.1
 soupsieve==2.6
@@ -76,6 +80,7 @@ starkbank-ecdsa==2.2.0
 stevedore==5.3.0
 tqdm==4.66.5
 traitlets==5.14.3
+typeguard==4.4.1
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
