--- a/requirements.txt
+++ b/requirements.txt
@@ -28,10 +28,12 @@ exceptiongroup==1.2.2
 executing==2.1.0
 feedparser==6.0.11
 filelock==3.16.1
+flower==2.0.1
 gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.6
 httpx==0.27.2
+humanize==4.11.0
 identify==2.6.1
 idna==3.10
 inflect==7.4.0
@@ -55,6 +57,7 @@ pbr==6.1.0
 pexpect==4.9.0
 platformdirs==4.3.6
 pre_commit==4.0.1
+prometheus_client==0.21.0
 prompt_toolkit==3.0.48
 ptyprocess==0.7.0
 pure_eval==0.2.3
@@ -78,6 +81,7 @@ sqlparse==0.5.1
 stack-data==0.6.3
 starkbank-ecdsa==2.2.0
 stevedore==5.3.0
+tornado==6.4.1
 tqdm==4.66.5
 traitlets==5.14.3
 typeguard==4.4.1
