updates ngnx configuration

--- a/configuration/ngnix_polishness.conf
+++ b/configuration/ngnix_polishness.conf
@@ -2,11 +2,26 @@
        listen 443 ssl;
        server_name poznajmypolske.pl www.poznajmypolske.pl;
 
+       error_log /home/danielp/DjangoPolishnessApp/logs/ngnix_error.log;
+
+
+       location = /robots.txt {
+         alias /home/danielp/DjangoPolishnessApp/robots.txt;
+         allow all;
+         access_log off;
+         log_not_found off;
+       }
+
+
        location /static/ {
           alias /home/danielp/DjangoPolishnessApp/staticfiles/;
        }
+
     ssl_certificate /etc/letsencrypt/live/poznajmypolske.pl/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/poznajmypolske.pl/privkey.pem; # managed by Certbot
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers 'ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA';
 
 
        location / {
@@ -14,5 +29,8 @@
                proxy_set_header Host $host;
                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        }
+
+
+
 
 }
